JMPQ3 2.0.0: Java 25 core and performance